add os icons in html page

--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -3,8 +3,7 @@
 					   xmlns:s="library://ns.adobe.com/flex/spark"
 					   showStatusBar="false" frameRate="60"
 					   creationComplete="creationCompleteHandler(event)"
-					   closing="closeHandler(event)" backgroundColor="0xefefef"
-					   title="Ats MobileStation (port:{httpPort})">
+					   closing="closeHandler(event)" backgroundColor="0xefefef">
 	<fx:Script>
 		<![CDATA[
 		import com.greensock.TweenMax;
@@ -107,6 +106,14 @@
 		}
 
 		protected function creationCompleteHandler(event:FlexEvent):void {
+
+			var appXml:XML = NativeApplication.nativeApplication.applicationDescriptor;
+			var ns:Namespace = NativeApplication.nativeApplication.applicationDescriptor.namespace();
+			const appVersion:String = appXml.ns::versionNumber[0];
+			//appName = appXml.ns::filename[0];
+			System.disposeXML(appXml);
+
+			title = "Ats MobileStation ("+appVersion+") - port:" + httpPort
 
 			var exitCommand:NativeMenuItem = iconMenu.addItem(new NativeMenuItem("Exit"));
 			exitCommand.addEventListener(Event.SELECT, exitAppHandler, false, 0, true);
