--- a/src/com/ats/gui/renderer/RunningDeviceRenderer.mxml
+++ b/src/com/ats/gui/renderer/RunningDeviceRenderer.mxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<renderer1:DeviceRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
+<renderer:DeviceRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
 						 xmlns:s="library://ns.adobe.com/flex/spark" 
-						 xmlns:mx="library://ns.adobe.com/flex/mx" 
-						 removedFromStage="removedFromStageHandler(event)" 
-						 xmlns:renderer="renderer.*" xmlns:renderer1="com.ats.gui.renderer.*">
+						 removedFromStage="removedFromStageHandler(event)"
+						 xmlns:renderer="com.ats.gui.renderer.*">
 	
 	<fx:Script>
 		<![CDATA[
@@ -135,4 +134,4 @@
 			</s:Group>
 		</s:HGroup>
 	</s:Group>
-</renderer1:DeviceRenderer>
+</renderer:DeviceRenderer>
