--- a/src/com/ats/gui/renderer/GenymotionTemplateDeviceRenderer.mxml
+++ b/src/com/ats/gui/renderer/GenymotionTemplateDeviceRenderer.mxml
@@ -50,7 +50,7 @@
 				<s:VGroup gap="3" mouseEnabled="false" verticalAlign="bottom" height="100%">
 					<s:HGroup>
 						<s:Label text="{data.name}" fontWeight="bold" maxWidth="234" maxDisplayedLines="1"/>
-						<s:Label text="({data.version})" fontSize="11" fontStyle="italic"/>
+						<s:Label text="({data.version.stringValue})" fontSize="11" fontStyle="italic"/>
 					</s:HGroup>
 					<s:Label text="{data.width} x {data.height}  (dpi:{data.dpi})" fontSize="11" fontStyle="italic" color="#758696"/>
 				</s:VGroup>
